# fama-im

./: AUTHORS  CONTRIBUTORS  ChangeLog  Makefile.am  NEWS  README  SConstruct  TODO  autogen.sh  build_functions.py  configure.ac  indent.txt  waf  wscript
src/: Makefile.am  SConscript  common.h  empathy-chat.c  empathy-chat.c~  empathy-chat.h  empathy-contactliststore.c  empathy-contactliststore.h  empathy-marshal.h  empathy-marshal.list  empathy-private-chat.c  fama-config.h.in  hintstring.h  indent.sh  main.c  mc-accounts.c  mc-accounts.h  tpa-account.c  tpa-channel.c  tpa-connection.c  tpa-contact.c  tpa-manager-factory.c  ui-clock.c  ui-color.c  ui-command-account.c  ui-command-connect.c  ui-command-contact.c  ui-command-line.c  ui-command-list.c  ui-command-status.c  ui-command.c  ui-contactlist.c  ui-dialog.c  ui-focus.c  ui-history.c  ui-history.h  ui-interface.c  ui-keyfile.c  ui-log.c  ui-logfile.c  (+10 more)
